Nanochat as a dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,3 +73,10 @@ conflicts = [
         { extra = "gpu" },
     ],
 ]
+
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+packages = ["nanochat"]
